--- a/notebooks/Chapter03_crossValidation.ipynb
+++ b/notebooks/Chapter03_crossValidation.ipynb
@@ -211,7 +211,7 @@
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "from src.kfoldsUtil import create_folds\n",
+    "from src.chapter03.kfoldsUtil import create_folds\n",
     "# we create a sample dataset with 15000 samples\n",
     "# and 100 features and 1 target\n",
     "X, y = datasets.make_regression(\n",
