--- a/notebooks/Chapter04_metrics.ipynb
+++ b/notebooks/Chapter04_metrics.ipynb
@@ -14,7 +14,7 @@
    "execution_count": 18,
    "outputs": [],
    "source": [
-    "from src.metricsUtil import util\n",
+    "from src.chapter04.metricsUtil import util\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn import metrics"
