--- a/notebooks/Chapter06_categoricalVariables.ipynb
+++ b/notebooks/Chapter06_categoricalVariables.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-17T13:02:17.408830700Z",
-     "start_time": "2023-12-17T13:02:16.106219400Z"
+     "end_time": "2023-12-18T02:31:16.795686600Z",
+     "start_time": "2023-12-18T02:28:57.118452800Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../input/cat_train.csv\")\n",
@@ -32,23 +32,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-17T13:02:24.067100500Z",
-     "start_time": "2023-12-17T13:02:17.413373600Z"
+     "end_time": "2023-12-18T02:31:18.598823900Z",
+     "start_time": "2023-12-18T02:31:16.795686600Z"
     }
    },
    "id": "29be056305e9b2be"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of dense array: 80000000\n",
-      "Size of sparse array: 3998424\n",
-      "Full size of sparse array: 6001640\n"
+      "Size of dense array: 40000000\n",
+      "Size of sparse array: 2003800\n",
+      "Full size of sparse array: 4011604\n"
      ]
     }
    ],
@@ -76,15 +76,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-17T13:02:24.090237600Z",
-     "start_time": "2023-12-17T13:02:20.566178Z"
+     "end_time": "2023-12-18T02:31:18.865019300Z",
+     "start_time": "2023-12-18T02:31:18.598823900Z"
     }
    },
    "id": "b50a8b7454408c0a"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -123,8 +123,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-17T13:22:01.294805900Z",
-     "start_time": "2023-12-17T13:21:56.681783700Z"
+     "end_time": "2023-12-18T02:31:31.972769700Z",
+     "start_time": "2023-12-18T02:31:18.865019300Z"
     }
    },
    "id": "9c24eebea1cf11b6"
@@ -140,21 +140,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-17T13:27:00.806600600Z",
-     "start_time": "2023-12-17T13:26:57.949150500Z"
+     "end_time": "2023-12-18T02:31:33.539152900Z",
+     "start_time": "2023-12-18T02:31:31.972769700Z"
     }
    },
    "id": "20e4dd8ff3e424de"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "ord_2\nBoiling Hot     84790\nCold            97822\nFreezing       142726\nHot             67508\nLava Hot        64840\nNONE            18075\nWarm           124239\nName: id, dtype: int64"
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,22 +165,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-17T15:26:47.050737900Z",
-     "start_time": "2023-12-17T15:26:46.872074Z"
+     "end_time": "2023-12-18T02:31:33.648437500Z",
+     "start_time": "2023-12-18T02:31:33.554754500Z"
     }
    },
    "id": "10b86f55d45d96dc"
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "          ord_1        ord_2  count\n0   Contributor  Boiling Hot  15634\n1   Contributor         Cold  17734\n2   Contributor     Freezing  26082\n3   Contributor          Hot  12428\n4   Contributor     Lava Hot  11919\n5   Contributor         NONE   3250\n6   Contributor         Warm  22774\n7        Expert  Boiling Hot  19477\n8        Expert         Cold  22956\n9        Expert     Freezing  33249\n10       Expert          Hot  15792\n11       Expert     Lava Hot  15078\n12       Expert         NONE   4225\n13       Expert         Warm  28900\n14  Grandmaster  Boiling Hot  13623\n15  Grandmaster         Cold  15464\n16  Grandmaster     Freezing  22818\n17  Grandmaster          Hot  10805\n18  Grandmaster     Lava Hot  10363\n19  Grandmaster         NONE   2894\n20  Grandmaster         Warm  19899\n21       Master  Boiling Hot  10800\n22       Master         Cold  12364\n23       Master     Freezing  18035\n24       Master          Hot   8594\n25       Master     Lava Hot   8209\n26       Master         NONE   2262\n27       Master         Warm  15734\n28       Novice  Boiling Hot  22718\n29       Novice         Cold  26271\n30       Novice     Freezing  38233\n31       Novice          Hot  17850\n32       Novice     Lava Hot  17373\n33       Novice         NONE   4889\n34       Novice         Warm  33263",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ord_1</th>\n      <th>ord_2</th>\n      <th>count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Contributor</td>\n      <td>Boiling Hot</td>\n      <td>15634</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Contributor</td>\n      <td>Cold</td>\n      <td>17734</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Contributor</td>\n      <td>Freezing</td>\n      <td>26082</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Contributor</td>\n      <td>Hot</td>\n      <td>12428</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Contributor</td>\n      <td>Lava Hot</td>\n      <td>11919</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Contributor</td>\n      <td>NONE</td>\n      <td>3250</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Contributor</td>\n      <td>Warm</td>\n      <td>22774</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Expert</td>\n      <td>Boiling Hot</td>\n      <td>19477</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Expert</td>\n      <td>Cold</td>\n      <td>22956</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Expert</td>\n      <td>Freezing</td>\n      <td>33249</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Expert</td>\n      <td>Hot</td>\n      <td>15792</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Expert</td>\n      <td>Lava Hot</td>\n      <td>15078</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Expert</td>\n      <td>NONE</td>\n      <td>4225</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Expert</td>\n      <td>Warm</td>\n      <td>28900</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>Grandmaster</td>\n      <td>Boiling Hot</td>\n      <td>13623</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Grandmaster</td>\n      <td>Cold</td>\n      <td>15464</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>Grandmaster</td>\n      <td>Freezing</td>\n      <td>22818</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>Grandmaster</td>\n      <td>Hot</td>\n      <td>10805</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>Grandmaster</td>\n      <td>Lava Hot</td>\n      <td>10363</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>Grandmaster</td>\n      <td>NONE</td>\n      <td>2894</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>Grandmaster</td>\n      <td>Warm</td>\n      <td>19899</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>Master</td>\n      <td>Boiling Hot</td>\n      <td>10800</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>Master</td>\n      <td>Cold</td>\n      <td>12364</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>Master</td>\n      <td>Freezing</td>\n      <td>18035</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>Master</td>\n      <td>Hot</td>\n      <td>8594</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>Master</td>\n      <td>Lava Hot</td>\n      <td>8209</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>Master</td>\n      <td>NONE</td>\n      <td>2262</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>Master</td>\n      <td>Warm</td>\n      <td>15734</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>Novice</td>\n      <td>Boiling Hot</td>\n      <td>22718</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>Novice</td>\n      <td>Cold</td>\n      <td>26271</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>Novice</td>\n      <td>Freezing</td>\n      <td>38233</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>Novice</td>\n      <td>Hot</td>\n      <td>17850</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>Novice</td>\n      <td>Lava Hot</td>\n      <td>17373</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>Novice</td>\n      <td>NONE</td>\n      <td>4889</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>Novice</td>\n      <td>Warm</td>\n      <td>33263</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,11 +191,80 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-17T15:27:42.070029200Z",
-     "start_time": "2023-12-17T15:27:41.933009300Z"
+     "end_time": "2023-12-18T02:31:33.789714700Z",
+     "start_time": "2023-12-18T02:31:33.648437500Z"
     }
    },
    "id": "813d21cb3272db5c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "df[\"new_feature\"] = (df[\"ord_1\"] + \"_\" + df[\"ord_2\"])\n",
+    "df.drop(\"new_feature\", axis=1, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-18T02:31:34.571643300Z",
+     "start_time": "2023-12-18T02:31:33.836816300Z"
+    }
+   },
+   "id": "7b86099d32f634dc"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Freezing       142726\nWarm           124239\nCold            97822\nBoiling Hot     84790\nHot             67508\nLava Hot        64840\nNONE            18075\nName: ord_2, dtype: int64"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.ord_2.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-18T02:31:34.618598600Z",
+     "start_time": "2023-12-18T02:31:34.556016300Z"
+    }
+   },
+   "id": "ecf7b17fd7275eaf"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(\"../input/cat_train.csv\")\n",
+    "test = pd.read_csv(\"../input/cat_test.csv\")\n",
+    "\n",
+    "test.loc[:, \"target\"] = -1\n",
+    "data = pd.concat([train, test], axis=0).reset_index(drop=True)\n",
+    "features = [x for x in train.columns if x not in [\"id\", \"target\"]]\n",
+    "for feature in features:\n",
+    "    lbl_enc = preprocessing.LabelEncoder()\n",
+    "    temp_col = data[feature].fillna(\"NONE\").astype(str).values\n",
+    "    data.loc[:,feature] = lbl_enc.fit_transform(temp_col)\n",
+    "train = data[data[\"target\"] != -1].reset_index(drop=True)\n",
+    "test = data[data[\"target\"] == -1].reset_index(drop=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-18T02:40:52.561100600Z",
+     "start_time": "2023-12-18T02:40:44.322882400Z"
+    }
+   },
+   "id": "eed8321cd85a8fe0"
   },
   {
    "cell_type": "code",
@@ -205,7 +274,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "7b86099d32f634dc"
+   "id": "ae63f3ece07aedd6"
   }
  ],
  "metadata": {
