--- a/notebooks/Chapter11_NLP.ipynb
+++ b/notebooks/Chapter11_NLP.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-12-25T09:04:56.281513400Z",
      "start_time": "2023-12-25T09:04:55.393231600Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -20,6 +20,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "cb52f5069f41bbd9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-25T09:14:25.458666700Z",
+     "start_time": "2023-12-25T09:14:25.447154400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -33,19 +42,19 @@
    "source": [
     "print(sentence.split())\n",
     "print(word_tokenize(sentence))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-25T09:14:25.458666700Z",
-     "start_time": "2023-12-25T09:14:25.447154400Z"
-    }
-   },
-   "id": "cb52f5069f41bbd9",
-   "execution_count": 14
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "7974e30ca3f556b5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-25T09:10:47.465735100Z",
+     "start_time": "2023-12-25T09:10:47.423383500Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -63,19 +72,19 @@
     "# fit the vectorizer on corpus\n",
     "ctv.fit(corpus)\n",
     "corpus_transformed = ctv.transform(corpus)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-25T09:10:47.465735100Z",
-     "start_time": "2023-12-25T09:10:47.423383500Z"
-    }
-   },
-   "id": "7974e30ca3f556b5",
-   "execution_count": 10
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "3b77fe20a6a2f113",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-25T09:11:06.677338600Z",
+     "start_time": "2023-12-25T09:11:06.619833300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -111,19 +120,19 @@
    ],
    "source": [
     "print(corpus_transformed)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-25T09:11:06.677338600Z",
-     "start_time": "2023-12-25T09:11:06.619833300Z"
-    }
-   },
-   "id": "3b77fe20a6a2f113",
-   "execution_count": 12
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "2efaf01235742079",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-25T09:13:23.797202500Z",
+     "start_time": "2023-12-25T09:13:23.743273100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -135,16 +144,54 @@
    ],
    "source": [
     "print(ctv.vocabulary_)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-25T09:13:23.797202500Z",
-     "start_time": "2023-12-25T09:13:23.743273100Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "231a432a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word=fishing\n",
+      "stemmed_word=fish\n",
+      "lemma=fishing\n",
+      "\n",
+      "word=fishes\n",
+      "stemmed_word=fish\n",
+      "lemma=fish\n",
+      "\n",
+      "word=fished\n",
+      "stemmed_word=fish\n",
+      "lemma=fished\n",
+      "\n"
+     ]
     }
-   },
-   "id": "2efaf01235742079",
-   "execution_count": 13
+   ],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "stemmer = SnowballStemmer(\"english\")\n",
+    "words = [\"fishing\", \"fishes\", \"fished\"]\n",
+    "for word in words:\n",
+    "    print(f\"word={word}\")\n",
+    "    print(f\"stemmed_word={stemmer.stem(word)}\")\n",
+    "    print(f\"lemma={lemmatizer.lemmatize(word)}\")\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd6f6a66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -156,14 +203,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
